<resources>
    <string name="app_name">Gram Converter</string>
    <string name="grams_converter">Grams Converter</string>
    <string name="calculate">Calculate</string>
    <string name="kilograms">Kilograms</string>
    <string name="grams">Grams</string>
    <string name="milligrams">Milligrams</string>
    <string name="micrograms">Micrograms</string>
    <string name="_0_micrograms">0 Micrograms</string>
</resources>